--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,39 @@
     transform: rotate(360deg);
   }
 }
+.content{
+
+  flex-direction: row; box-sizing: border-box; display: flex; place-content: flex-end flex-start; align-items: flex-end; 
+}
+.big{  
+ margin-left: 12px;
+}
+.text{
+  font-size: 16px;
+  line-height: 22px;
+
+}
+.plus{
+  flex-direction: row; box-sizing: border-box; display: flex; place-content: center; align-items: center;
+  background-color: #2f5175;
+  width: 136px;
+  height: 136px;
+  border-radius: 50%;
+  border: none
+
+}
+.plusElement{
+  color: #ffffff;
+  vertical-align: middle;
+  vertical-align: middle;background-repeat: no-repeat;
+  display: inline-block;
+  fill: currentColor;
+  font-size: 100px;
+  align-self: auto;
+
+  width: 60px;
+
+}
+#hiddenm{
+  display: none;
+}
